# RAG-Langchain

./: .gitignore  pyproject.toml  requirement.txt
data/text_files/: ML_intro.txt  python_intro.txt
notebook/: document.ipynb  pdf_loader.ipynb
